--- a/NewSpek/Views/Shared/_Layout.cshtml
+++ b/NewSpek/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year Janne Kuosmanen - Newspek</p>
+            <p>&copy; @DateTime.Now.Year Janne Kuosmanen, Tommi Kostilainen - Newspek</p>
         </footer>
     </div>
 
